cookie and redis

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://sadewawicak:postgres@localhost:5432/db_elysiajs?schema=public"
-URL="http://localhost:3000"
+URL="localhost"
+JWT_SECRET="secret@2024#"
