--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
+    "@elysiajs/jwt": "^1.1.1",
     "@elysiajs/server-timing": "^1.1.0",
     "@elysiajs/swagger": "^1.1.1",
     "@prisma/client": "^5.19.1",
     "elysia": "latest",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "bun-types": "latest",
